--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "expo": "~37.0.3",
+    "expo-av": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-simple-radio-button": "^2.7.4",
+    "react-native-unimodules": "^0.9.1",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
